# git-github.com-v6t2b9-jupyter_json_viewer

./: .gitignore  README.md  demo.ipynb  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-app.yml
docs/: Anpassungsmöglichkeiten.md
jupyter_json_viewer/: __init__.py  viewer.py
jupyter_json_viewer/tests/: __init__.py  test_viewer.py
