[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter_json_viewer"
version = "0.1.0"
description = "An interactive JSON viewer for Jupyter notebooks"
requires-python = ">=3.6"

[tool.pytest.ini_options]
testpaths = ["jupyter_json_viewer/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"