[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-json-viewer"
version = "0.1.5"
description = "An interactive JSON viewer for Jupyter Notebooks"
readme = "README.md"
license = { text = "GNU General Public License v3.0" }
authors = [{ name = "Johannes Kaindl" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = ["IPython>=7.0.0"]
